<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bing_pic_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/timg"
        />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:overScrollMode="never"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:custom="http://schemas.android.com/apk/res-auto"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      tools:context="com.ckt.test.autobtwifi.progressBar"
                      android:fitsSystemWindows="true">

            <include layout="@layout/title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dip"
                android:layout_weight="4"
                android:layout_marginStart="10dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/bt"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <com.suke.widget.SwitchButton
                android:id="@+id/BT_switch_button"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/BT_switch_space_time"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/BT_switch_space_time"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="0dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/BT_switch_times"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/BT_switch_times"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="0dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/BT_start"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/start_btn"/>

                <Button
                    android:id="@+id/BT_stop"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="0dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/stop_btn"
                    />
                <Button
                    android:id="@+id/get_BT_report"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dip"
                    android:text="@string/get_report"/>
            </LinearLayout>

            <TextView
                android:id="@+id/show_BT_count"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginStart="0dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/bt_test_times"
                android:textColor="@color/black"

                />

            <com.ckt.test.autobtwifi.progressBar.NumberProgressBar
                android:id="@+id/number_bar1"
                style="@style/NumberProgressBar_Default"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="20dp"
                custom:progress_current="0"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dip"
                android:layout_weight="4"
                android:layout_marginStart="10dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/wifi"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

                <com.suke.widget.SwitchButton
                    android:id="@+id/wifi_switch_button"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"/>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wifi_switch_space_time"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/wifi_switch_space_time"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="0dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/wifi_switch_times"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/wifi_switch_times"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="0dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:inputType="number"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/wifi_start"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/start_btn"/>

                <Button
                    android:id="@+id/wifi_stop"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_marginStart="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_weight="1"
                    android:text="@string/stop_btn"
                    />
                <Button
                    android:id="@+id/get_wifi_report"
                    android:layout_width="0dp"
                    android:layout_height="50dip"
                    android:layout_weight="1"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dip"
                    android:text="@string/get_report"/>
            </LinearLayout>

            <TextView
                android:id="@+id/show_wifi_count"
                android:layout_width="match_parent"
                android:layout_height="30dip"
                android:layout_marginStart="0dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/wifi_test_times"
                android:textColor="@color/black"

                />

            <com.ckt.test.autobtwifi.progressBar.NumberProgressBar
                android:id="@+id/number_bar2"
                style="@style/NumberProgressBar_Default"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="20dp"
                custom:progress_current="0"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>